# advisor-executor-strategy

./: README.md  config-mcp.yaml  config-ollama.yaml  config.yaml  example.txt  pyproject.toml  test_mcp_loop.py  test_mcp_server.py
advisor_executor_poc/: __init__.py  __main__.py  agent.py  cli.py  config.py  mcp_client.py  mcp_server.py  models.py  plan.py  tools.py
docs/: index.html  styles.css
