[project]
name = "advisor-executor-poc"
version = "0.1.0"
description = "Minimal proof-of-concept for a model-agnostic, tool-agnostic advisor/executor agent."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
mcp = ["mcp>=1.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.30",
    "mcp>=1.0",
]

[project.scripts]
aepoc = "advisor_executor_poc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
